feat (CORE) : start configuration of main color palette

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  type="text/css" rel="stylesheet" href="css/style.css">
+    <link  type="text/css" rel="stylesheet" href="CSS/style.css">
     <title>Document</title>
 </head>
-<body>
-    
+<body id="index-body">
+    <main id="index-main">
+        <div class="title">Hello World !</div>
+    </main>
 </body>
 </html>
