feat (CORE STYLE) : styling of introduction page almost accomplished

--- a/index.html
+++ b/index.html
@@ -8,7 +8,51 @@
 </head>
 <body id="index-body">
     <main id="index-main">
-        <div class="title">Hello World !</div>
+        <nav>
+            <div class="link right-edge">
+                <a href="HTML/works.html">Works</a>
+            </div>
+            <div class="link right-edge">
+                <a href="HTML/about.html">About</a>
+            </div>
+            <div class="link">
+                <a href="HTML/contact.html">Contact</a>
+            </div>
+        </nav>
+        <div class="centered-losange--wrapper">
+            <div class="centered-losange"></div>
+        </div>
+
+
+        <div class="title">
+            <div class="first-name">
+                N<span class="cursive">O</span>AH
+            </div>
+            <div class="full-name">
+                STEINI<span class="cursive" id="G">G</span>ER
+            </div>
+        </div>
+
+        <div class="corners top-left">
+            <div class="horizontal-bar"></div>
+            <div class="losange"></div>
+            <div class="vertical-bar"></div>
+        </div>
+
+        <div class="page-index">
+            <div class="losange">
+                <div class="losange" id="index-losange"></div>
+            </div>
+            <div class="losange"></div>
+            <div class="losange"></div>
+            <div class="losange"></div>
+        </div>
+
+        <div class="corners bottom-right">
+            <div class="horizontal-bar"></div>
+            <div class="losange"></div>
+            <div class="vertical-bar"></div>
+        </div>
     </main>
 </body>
 </html>
