feat (details) : third bar came nicely into place

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="corners top-left">
             <div class="horizontal-bar"></div>
             <div class="losange"></div>
+            <div class="mini-horizontal-bar"></div>
             <div class="vertical-bar"></div>
         </div>
 
@@ -51,6 +52,7 @@
         <div class="corners bottom-right">
             <div class="horizontal-bar"></div>
             <div class="losange"></div>
+            <div class="mini-horizontal-bar"></div>
             <div class="vertical-bar"></div>
         </div>
     </main>
