feat! (ALL PAGES) : all pages have css linked

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  type="text/css" rel="stylesheet" href="CSS/style.css">
+    <link  type="text/css" rel="stylesheet" href="../CSS/style.css">
     <title>Document</title>
 </head>
-<body id="index-body">
-    <main id="index-main">
+<body id="contact-body">
+    <main id="contact-main">
         <nav>
-            <div class="link right-edge">
-                <a href="HTML/works.html">Works</a>
-            </div>
-            <div class="link right-edge">
-                <a href="HTML/about.html">About</a>
-            </div>
-            <div class="link">
-                <a href="HTML/contact.html">Contact</a>
+            <div class="nav-section">
+                <div class="link right-edge">
+                    <a href="../index.html">Home</a>
+                </div>
+                <div class="link right-edge">
+                    <a href="works.html">Works</a>
+                </div>
+                <div class="link">
+                    <a href="about.html">About</a>
+                </div>
             </div>
         </nav>
 
@@ -28,10 +30,7 @@
 
         <div class="title">
             <div class="first-name">
-                N<span class="cursive">O</span>AH
-            </div>
-            <div class="full-name">
-                STEINI<span class="cursive" id="G">G</span>ER
+                CO<span class="cursive" id="N">N</span>TACT
             </div>
         </div>
 
@@ -45,22 +44,21 @@
 
         <div class="page-index">
             <div class="losange--wrapper">
+                <div class="losange"></div>
+            </div>
+            
+            <div class="losange--wrapper">
+                <div class="losange"></div>
+            </div>
+
+            <div class="losange--wrapper">
+                <div class="losange"></div>
+            </div>
+            <div class="losange--wrapper">
                 <div class="losange">
                     <div class="losange" id="index-losange"></div>
                 </div>
             </div>
-            <div class="losange--wrapper">
-                <div class="losange"></div>
-            </div>
-
-            <div class="losange--wrapper">
-                <div class="losange"></div>
-            </div>
-
-            <div class="losange--wrapper">
-                <div class="losange"></div>
-            </div>
-
         </div>
 
         <div class="corners bottom-right">
