--- a/HTML/works.html
+++ b/HTML/works.html
@@ -9,14 +9,16 @@
 <body id="works-body">
     <main id="works-main">
         <nav>
-            <div class="link right-edge">
-                <a href="../index.html">Home</a>
-            </div>
-            <div class="link right-edge">
-                <a href="about.html">About</a>
-            </div>
-            <div class="link">
-                <a href="contact.html">Contact</a>
+            <div class="nav-section">
+                <div class="link right-edge">
+                    <a href="../index.html">Home</a>
+                </div>
+                <div class="link right-edge">
+                    <a href="about.html">About</a>
+                </div>
+                <div class="link">
+                    <a href="contact.html">Contact</a>
+                </div>
             </div>
         </nav>
 
@@ -43,8 +45,10 @@
         
 
         <div class="scroll-arrow--wrapper">
-            Scroll
-            <div class="scroll-wrapper"></div>
+            <div class="scroll">
+                Scroll
+            </div>
+            <div class="bar"></div>
         </div>
         
         <!--___________________________ D E C O R A T I O N _________________________-->
@@ -73,6 +77,13 @@
             <div class="losange--wrapper">
                 <div class="losange"></div>
             </div>
+        </div>
+
+        <div class="corners bottom-right" id ="works-bottom-right">
+            <div class="horizontal-bar"></div>
+            <div class="losange"></div>
+            <div class="mini-horizontal-bar"></div>
+            <div class="vertical-bar"></div>
         </div>
     </main>
 </body>
