--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 <body id="index-body">
     <main id="index-main">
         <nav>
-            <div class="link right-edge">
-                <a href="HTML/works.html">Works</a>
-            </div>
-            <div class="link right-edge">
-                <a href="HTML/about.html">About</a>
-            </div>
-            <div class="link">
-                <a href="HTML/contact.html">Contact</a>
+            <div class="nav-section">
+                <div class="link right-edge">
+                    <a href="HTML/works.html">Works</a>
+                </div>
+                <div class="link right-edge">
+                    <a href="HTML/about.html">About</a>
+                </div>
+                <div class="link">
+                    <a href="HTML/contact.html">Contact</a>
+                </div>
             </div>
         </nav>
+
 
 
         <div class="centered-losange--wrapper">
