feat (WORKS) : add of project buttons

--- a/HTML/works.html
+++ b/HTML/works.html
@@ -35,12 +35,71 @@
         </div>
 
         <div class="box">
-            Coucou les frr
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <button class="box-title" onclick="
+                console.log(`coucou les frr`);
+            ">
+                <div>
+                    <span class="cursive" id="shell-cursive">42</span>$H<span class="less">ELL</span><br>
+                </div>
+            </div>
         </div>
+
         <div class="box">
-            C'est Sami
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <button class="box-title" onclick=" console.log(`coucou les frr`); ">
+                R<span class="cursive">P</span>G<pspan class="less"> : Kaben Project</span>
+            </button>
+
+        </div>
+        
+        <div class="box">
+            <button class="box-title" onclick="
+                console.log(`coucou les frr`);
+            "><span class="less">Mini </span><span class="cursive">L</span>IB - C
+            </button>
+        </div>
+
+        <div class="box">
+            <button class="box-title" onclick="
+                console.log(`coucou les frr`);
+            ">
+                <div>
+                    LES P'<span class="cursive">T</span>ITS
+                    <br>BONHEURS
+                    <br><span class="less">soon...</span>
+                </div>
+            </button>
+        </div>
+
+        <div class="box">
+            <button class="box-title" onclick="
+                console.log(`coucou les frr`);
+            ">
+                <div>
+                    EVELYNE's
+                    <br>C<span class="cursive">R</span>EATIONS
+                    <br><span class="less">soon...</span>
+                </div>
+            </button>
+        </div>
+
+        <div class="box">
+            <button class="box-title" onclick="
+                console.log(`coucou les frr`);
+            ">
+                <div>
+                    <span class="cursive">G<span class="less">ame </span></span>O<span class="less">f </span>L<span class="less">ife</span>
+                </div>
+            </button>
+        </div>
+
+        <div class="box">
+            <button class="box-title" onclick="
+                console.log(`coucou les frr`);
+            ">
+                <div>
+                    <span class="less">First </span>PORTFOLI<span class="cursive">O</span>
+                </div>
+            </button>
         </div>
         
 
