--- a/HTML/about.html
+++ b/HTML/about.html
@@ -40,9 +40,8 @@
             </div>
         </div>
 
-        <div class="box">*
-
-            Coucou les frr
+        <div class="box">
+            <div class="title"><div class="cursive">42</div>SHELL</div>
 
             <br><br><br><br>
             <br><br><br><br>
