--- a/HTML/works.html
+++ b/HTML/works.html
@@ -35,9 +35,7 @@
         </div>
 
         <div class="box">
-            <button class="box-title" onclick="
-                console.log(`coucou les frr`);
-            ">
+            <button class="box-title" onclick=" console.log(`button pressed`); ">
                 <div>
                     <span class="cursive" id="shell-cursive">42</span>$H<span class="less">ELL</span><br>
                 </div>
@@ -45,23 +43,23 @@
         </div>
 
         <div class="box">
-            <button class="box-title" onclick=" console.log(`coucou les frr`); ">
-                R<span class="cursive">P</span>G<pspan class="less"> : Kaben Project</span>
-            </button>
-
+            <button class="box-title" onclick=" console.log(`button pressed`); ">
+                <div>
+                    R<span class="cursive">P</span>G<pspan class="less"> : Kaben Project</pspan>
+                </div>
+            </div>
         </div>
         
         <div class="box">
-            <button class="box-title" onclick="
-                console.log(`coucou les frr`);
-            "><span class="less">Mini </span><span class="cursive">L</span>IB - C
+            <button class="box-title" onclick=" console.log(`button pressed`); ">
+                <div>
+                    <span class="less">Mini </span><span class="cursive">L</span>IB - C
+                </div>
             </button>
         </div>
 
         <div class="box">
-            <button class="box-title" onclick="
-                console.log(`coucou les frr`);
-            ">
+            <button class="box-title" onclick=" console.log(`button pressed`); ">
                 <div>
                     LES P'<span class="cursive">T</span>ITS
                     <br>BONHEURS
@@ -71,9 +69,7 @@
         </div>
 
         <div class="box">
-            <button class="box-title" onclick="
-                console.log(`coucou les frr`);
-            ">
+            <button class="box-title" onclick=" console.log(`button pressed`); ">
                 <div>
                     EVELYNE's
                     <br>C<span class="cursive">R</span>EATIONS
@@ -83,9 +79,7 @@
         </div>
 
         <div class="box">
-            <button class="box-title" onclick="
-                console.log(`coucou les frr`);
-            ">
+            <button class="box-title" onclick=" console.log(`button pressed`); ">
                 <div>
                     <span class="cursive">G<span class="less">ame </span></span>O<span class="less">f </span>L<span class="less">ife</span>
                 </div>
@@ -93,9 +87,7 @@
         </div>
 
         <div class="box">
-            <button class="box-title" onclick="
-                console.log(`coucou les frr`);
-            ">
+            <button class="box-title" onclick=" console.log(`button pressed`); ">
                 <div>
                     <span class="less">First </span>PORTFOLI<span class="cursive">O</span>
                 </div>
@@ -145,5 +137,7 @@
             <div class="vertical-bar"></div>
         </div>
     </main>
+
+    <script src="../JS/handleWorksBoxes.js"></script>
 </body>
 </html>
