feat! (CONTACT) : disappearance js animation + form layout

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -41,25 +41,26 @@
         </div>
 
         <div class="box">
-            <div class="title"><div class="cursive">42</div>SHELL</div>
-
-            <br><br><br><br>
-            <br><br><br><br>
-            <br><br><br><br>
-            <br><br><br><br>
-            <br><br><br><br>
-            <br><br><br><br>
-        </div>
-        <div class="box">
-
-            C'est Sami
-        
-            <br><br><br><br>
-            <br><br><br><br>
-            <br><br><br><br>
-            <br><br><br><br>
-            <br><br><br><br>
-            <br><br><br><br>
+            <button class="box-title" onclick=" console.log(`button pressed`); ">
+                <div>
+                    <span class="cursive">G</span>1an<span class="less">Carlo</span>
+                </div>
+            </button>
+            <div class="paragraph">
+                I haven't properly introduced myself so here it goes !
+                <br>
+                <br>
+                My name is Noah GianCarlo Steiniger, i'm a French junior developer studying at &#123;EPITECH&#125; Strasbourg.
+                I absolutely love challenges, and since programing is the ideal place to get some, i naturally curved to the topic.
+                <br>
+                <br>
+                I got the hard work focus part of my dad and the artistic creativity of my mother ! So, building beautiful website and
+                becoming a front-end designer / developer is my actual main focus.
+                <br>
+                <br>
+                Hardeously studying at &#123;EPITECH&#125; brings me the algorythmic and programing skills needed to code inteligently and
+                efficiently. 
+            </div>
         </div>
         
 
