--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -22,18 +22,23 @@
             </div>
         </nav>
 
-
-        <div class="centered-losange--wrapper">
-            <div class="centered-losange"></div>
-        </div>
-
-
-        <div class="title">
-            <div class="first-name">
-                CO<span class="cursive" id="N">N</span>TACT
+        <div id="intro-to-disappear">
+            <div class="centered-losange--wrapper">
+                <div class="centered-losange"></div>
+            </div>
+    
+            <div class="title">
+                <div class="first-name">
+                    CO<span class="cursive" id="N">N</span>TACT
+                </div>
             </div>
         </div>
 
+        <div id="to-enter">
+            <form method="POST">
+                
+            </form>
+        </div>
 
         <div class="corners top-left">
             <div class="horizontal-bar"></div>
@@ -68,5 +73,6 @@
             <div class="vertical-bar"></div>
         </div>
     </main>
+    <script src="../JS/ContactIntroHandler.js"></script>
 </body>
 </html>
