--- a/HTML/works.html
+++ b/HTML/works.html
@@ -139,5 +139,6 @@
     </main>
 
     <script src="../JS/handleWorksBoxes.js"></script>
+    <script src="../JS/flickty.js"></script>
 </body>
 </html>
