feat (flickity) : add requirements

--- a/HTML/works.html
+++ b/HTML/works.html
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <div class="box">
+        <!-- <div class="box">
             <button class="box-title" onclick=" console.log(`button pressed`); ">
                 <div>
                     <span class="cursive" id="shell-cursive">42</span>$H<span class="less">ELL</span><br>
@@ -92,6 +92,14 @@
                     <span class="less">First </span>PORTFOLI<span class="cursive">O</span>
                 </div>
             </button>
+        </div> -->
+
+        <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
+            <div class="gallery-cell"></div>
+            <div class="gallery-cell"></div>
+            <div class="gallery-cell"></div>
+            <div class="gallery-cell"></div>
+            <div class="gallery-cell"></div>
         </div>
         
 
